After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753783 - URL shouldn't be translatable
URL shouldn't be translatable
Status: RESOLVED FIXED
Product: atomix
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Atomix Maintainer(s)
Atomix Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-08-19 00:26 UTC by Piotr Drąg
Modified: 2015-08-31 12:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Piotr Drąg 2015-08-19 00:26:12 UTC
URL added in https://git.gnome.org/browse/atomix/commit/?id=fd82c9d1cfbf1c9b58634f92740f843644c328ad shouldn't be marked for translation.