URL shouldn't be translatable

https://bugzilla.gnome.org/show_bug.cgi?id=753783